# regexes

./: .gitignore  README.md  blogpost.md  dune-project  notes.md
coq/: Antimirov.v  Brzozowski.v  Edelmann.v  EdelmannGset.v  Equivalent.v  Filinski.v  Finite.v  Height.v  ListMonad.v  ReCountable.v  Regex.v  RegexOpt.v  Regex_lecture.v  Regex_opt.v  ZipperAntimirov.v  ZipperAntimirovGset.v  _CoqProject  brzozowski.v  edelmann.ml  edelmann.ml.d  edelmann.mli  edelmann.mli.d  filinski.v  jules_regex_derivatives.v
coq/old/: Edelmann.v  Filinski.v  ListMonad.v  ZipperAntimirovOriginal.v
lib/: dune  filinski.ml  filinski.mli  harper.ml
ocaml/: Makefile  dune-project  regexes.opam
ocaml/lib/: antimirov.ml  brzozowski.ml  brzozowski_zipper.ml  dune  examples.ml  extracted_brzozowski_zipper.ml  filinski.ml  krishnaswami.ml  quickcheck_properties.ml  regex.ml  three_matchers.ml  utils.ml  zipper.ml  zipper_antimirov.ml
ocaml/old/: brzozowski_zipper.ml  dune  filinski.ml  harper.ml  krishnaswami.ml
test/: dune
