(lang dune 3.16)

(name regexes)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license "ISC")

(documentation https://url/to/documentation)

(package
 (name regexes)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  (stdio
   (>= v0.17.0))
  (sexplib
   (>= v0.17.0))
  (ppx_quick_test
   (>= v0.17.0))
  (ppx_jane
   (>= v0.17.0))
  (core
   (>= v0.17.1))
  (base_quickcheck
   (>= v0.17.0))
  (base
   (>= v0.17.1))
  ocaml
  dune)
 (tags
  (topics "to describe" your project)))