(lang dune 3.16)

(name regexes)

(generate_opam_files true)

(source
 (github ngernest/regexes))

(authors "Ernest Ng" "Laura Zielinski")

(license "ISC")

(package
 (name regexes)
 (synopsis "Regex matchers based on Brzozowski / Antimirov derivatives and zippers")
 (depends
  (stdio
   (>= v0.17.0))
  (sexplib
   (>= v0.17.0))
  (ppx_quick_test
   (>= v0.17.0))
  (ppx_jane
   (>= v0.17.0))
  (core
   (>= v0.17.1))
  (base_quickcheck
   (>= v0.17.0))
  (base
   (>= v0.17.1))
  ocaml
  dune))
  